--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.6",
-    "@types/react": "16.8.14",
+    "@types/react": "^16.8.14",
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
