--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "*",
+    "@material-ui/icons": "*",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.6",
     "@types/react": "^16.9.9",
