--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "2.1.8",
-    "typescript": "3.4.4"
+    "typescript": "*"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
