--- a/web/package.json
+++ b/web/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@material-ui/core": "*",
     "@material-ui/icons": "*",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.6",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "16.8.4",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "2.1.8",
+    "@types/jest": "*",
+    "@types/node": "*",
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-scripts": "*",
     "typescript": "*"
   },
   "scripts": {
