I think i know better

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
+    "@material-ui/core": "*",
     "@material-ui/icons": "*",
     "@types/jest": "*",
-    "@types/node": "^12.12.12",
-    "@types/react": "^16.9.12",
+    "@types/node": "*",
+    "@types/react": "*",
     "@types/react-dom": "*",
     "@types/react-router-dom": "*",
     "@types/styled-components": "*",
